Ändrat texten på startsidan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MAMN01-grupp4</string>
+    <string name="splash_screen_text">Team 4 Splashscreen!</string>
 </resources>
