--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">MAMN01-grupp4</string>
     <string name="splash_screen_text">Team 4 Splashscreen!</string>
+    <string name="title_home">Home</string>
+    <string name="title_map">Map</string>
+    <string name="title_scan">Scan</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus ac neque feugiat placerat ut eu elit. Nam pulvinar congue porttitor. Cras a ipsum dolor. Suspendisse potenti. Cras congue pellentesque enim, in ultrices dui rhoncus eu. Aenean congue massa lacinia scelerisque dapibus. Pellentesque eget consectetur nibh. Nunc erat velit, commodo non lacinia non, sagittis et est. Aenean dolor odio, molestie et lorem sed, aliquet accumsan quam. Maecenas vestibulum non ipsum a ornare. Nunc pretium metus eget ex aliquet sodales. Donec blandit tellus ac felis tristique, ut dignissim metus sagittis. Donec condimentum tempor mattis. Mauris sollicitudin, lorem eget bibendum ullamcorper, ante nisi imperdiet arcu, lobortis lobortis felis urna sit amet eros. Mauris suscipit risus a velit efficitur accumsan. Nulla imperdiet nibh sed velit faucibus, ut venenatis diam maximus.
+
+Proin consectetur mauris risus. Ut id pretium nisl. Vestibulum ac augue ut elit maximus porta. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec porta aliquet est eget porta. Sed et gravida dolor. Quisque imperdiet, ligula a accumsan gravida, lorem augue aliquet nulla, sit amet pellentesque augue lacus a urna.
+
+Vestibulum feugiat orci nec est faucibus vestibulum. Vivamus vel ante ut nulla sodales sagittis eu et est. Nam id turpis consectetur, varius magna ut, iaculis diam. In finibus mauris eget lobortis tristique. Morbi vehicula tempor ligula, sit amet porttitor ipsum ornare non. Praesent libero lorem, tincidunt ac lobortis luctus, laoreet at sapien. Vestibulum et est orci. Nam nec mi sagittis, eleifend urna vel, porta lectus. Sed molestie, nisi vitae rutrum pulvinar, ex enim faucibus enim, in viverra massa mauris sed dolor. Vivamus elementum vulputate ipsum, vitae bibendum diam viverra id. Integer id ipsum nisi.
+
+Nunc mattis nibh in placerat euismod. Quisque consectetur et quam in volutpat. Nulla suscipit pharetra facilisis. Curabitur porta metus et consequat fermentum. Mauris vel odio et lorem accumsan mattis. Duis tellus nisl, porttitor elementum venenatis at, tempor in elit. In ullamcorper urna non elit cursus auctor. Vivamus luctus, nunc vel dapibus euismod, quam ex euismod enim, eu ultrices augue dui sit amet tortor. Nullam nec lectus eu erat volutpat tempus. Duis a lorem risus. Suspendisse quis aliquam justo. In quis lacinia est. Nulla facilisi. Suspendisse nec erat eu felis accumsan facilisis.
+
+Nulla efficitur porta enim ut porta. Vivamus fringilla, nunc nec dignissim pharetra, nisl ex ultrices mi, sit amet porta tellus odio vel dolor. Vivamus eu justo est. Suspendisse potenti. Praesent sollicitudin non nunc id bibendum. Proin sodales massa quis quam volutpat, vel vehicula nulla fermentum. Maecenas in euismod nunc. Praesent sollicitudin, quam nec tincidunt aliquam, nunc mi semper purus, a faucibus libero lorem sit amet urna. Proin ut lacinia ex.</string>
 </resources>
