--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MAMN01-grupp4</string>
+    <string name="app_name">Quiz It Is!</string>
     <string name="splash_screen_text">Team 4 Splashscreen!</string>
     <string name="title_home">Quiz It Is!</string>
     <string name="title_quiz">Quiz</string>
